--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -1,11 +1,11 @@
-\chapter{Sensor Testing} 
+\section{Sensor Testing} 
 In this chapter the different sensors will be tested, the reasoning for testing
 the sensors is that we need to find out how precise the sensors are and how far
 they can measure. There are two sensor which needs to be tested, one is an
 ultrasonic sensor which is used for measuring the distance. The other sensor
 which needs to be tested is a camera for tracking specific colours. We will then
 use the results from these test to utilize the full potential of the sensors. 
-
+ 
 To find out which sensors are the optimal
 sensors for the project, this chapter will be used to test the different sensors. The testing of the
 sensors will also be used to find out how precise they are.\nl
@@ -13,11 +13,11 @@ sensors will also be used to find out how precise they are.\nl
 First the testing methodology will be explained, then this methodology
 will be used to devise tests for the different sensors. 
 
-\section{Testing Methodology}
+\subsection{Testing Methodology}
 The testing will be divided into to two parts, one part is testing the two
 distance sensors and the second part is testing the camera. 
 
-\subsection{Ultrasonic Sensor}
+\subsubsection{Ultrasonic Sensor}
 The test of the ultrasonic sensor was divided into 4 different experiments, the
 difference between the experiments are the size of the object being tracked and
 whether the sensor is shielded or not. The different object sizes was tested
@@ -71,7 +71,7 @@ large field of view. Therefore, the object should be wider rather than taller.
 % become a very limiting factor in regards to how far the target can be placed
 % from the cannon. 
 
-\subsection{Camera tracking}%Will most likely need a better name
+\subsubsection{Camera tracking}%Will most likely need a better name
 Testing the camera will consist of several parts, these parts will heavily rely
 on the technical specifications of the camera. Therefore the first part of this
 section will be on the technical specifications of the camera and the needed
