--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -5,7 +5,7 @@ be known as sensors. These sensors are used to gather data about the various
 aspects of the surrounding environment such as, sound, visuals, temperature and
 movement. Because of the importance of correctly choosing and using these
 sensors, this chapter will be used to explain, analyze and test the different
-sensors which will be used for this project.
+sensors which will be used throughout this project.
 
 \input{sections/Sensors/sensorTheory.tex} 
 \input{sections/Sensors/SensorTest.tex}
