--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -1,5 +1,22 @@
-\chapter{Sensor Theory}\label{SensorTheory}
-\section{Ultrasonic Sensor}
+\section{Sensor Theory}\label{SensorTheory}
+For the purpose of sensing its environment, the turret will need two key
+features: the ability to identify a target, and the ability to measure the
+distance to said target. The identification process will be used to find and
+track a target, and the distance measurement will be used to accurately use the
+formula for projectile motion described in \autoref{ProjMotion} to hit the
+target.
+
+\subsection{Colour Camera}
+For the purpose of identifying and tracking a target, the developed turret will
+make use of a specialized camera, which is capable of identifying coloured
+objects. In order to use the camera, the user specifies a colour of choice,
+which will then be searched for. When the camera registers an object of this
+colour, it will build a datalogical representation of the object consisting of a
+number of 
+
+Below are the technical specifications for the camera.
+
+\subsection{Ultrasonic Sensor}
 The ultrasonic sensor works by producing sound waves from one of the two
 frontal holes. The sound wave is then bounced back by an object and received by
 the second hole. The delay between producing and receiving the sound wave
