- Added an explanation of the camera tests  - Added the first test

--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -88,3 +88,17 @@ The setup of the camera is quite simple and is done using a computer, to setup
 which color it is suposed to track. The process of choosing the color is done
 using some software that comes with the camera, here a colormap is made which
 tells the preprocessor on the camera which colors to track. 
+
+There are three different test that can be done, first to the how far
+the camera can track an object, the second to determine which colour the camera
+best sees and the third to determine if lighting up the object changed the
+cameras abillity to track the colour \/ object.\nl
+
+The first test is to determine what colour the camera best can see, to do this
+a square of paper with the same size will be used to make sure that the only
+diffence is the colour of the paper. The setup of the test is that the camera
+should stay at the same place so that the lighting condition stays the same,
+then the paper square is place at a certain distance to the camera. The result
+of each test is how many blobs of the tracking was the recordnised and how
+consisten the size of the coloured blob is.\nl
+
