--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -5,21 +5,22 @@ quick overview of the elements will be described in order to provide a basic
 understanding in relation to the project.
 
 \subsection{Definition}
-In order to give a proper foundation of the core concepts in the field of RTS, a
-proper definition will be given.
-The Oxford Dictionary of Computing \citep{daintith2008dictionary} defines a
-real-time system as follows \say{Any system in which the time at which output is
-produced is significant. This is usually because the input corresponds to some
-movement in the physical world, and the output has to relate to that same
-movement. The lag from input time to output time must be sufficiently small for
-acceptable timeliness. Timeliness is a function of the total system: missile
-guidance requires output within a few milliseconds of input whereas scheduling
-of steamships requires responses measured in days. Real-time systems are usually
-considered to be those in which the response time is of order milliseconds;
-interactive systems are those with response times of order seconds and batch
-systems are those with response times of hours or days. Real-time systems may be
-subdivided into hard and soft, depending on the severity of failure to meet a
-deadline for output.}
+In order to give a proper foundation of the core concepts in the field of RTS,
+we will give our definition of real time systems. We define a real time system
+as \say{A real time system is any information processing system, which needs to
+react within a finite time period to externaly generated inputs. Within real
+time systems there are two important distinction, namely hard- and soft real
+time systems. A hard real time system is a system where it is critical to meet
+deadlines, whereas a soft real time system it is not.} 
+% The Oxford Dictionary of
+% Computing \citep{daintith2008dictionary} defines a real-time system as follows \say{Any system in which the time at which output is produced is significant. This is usually because the input corresponds to some movement in the physical world, and the output has to relate to that same movement. The lag from input time to output time must be sufficiently small for acceptable timeliness. Timeliness is a function of the total system: missile
+% guidance requires output within a few milliseconds of input whereas scheduling
+% of steamships requires responses measured in days. Real-time systems are usually
+% considered to be those in which the response time is of order milliseconds;
+% interactive systems are those with response times of order seconds and batch
+% systems are those with response times of hours or days. Real-time systems may be
+% subdivided into hard and soft, depending on the severity of failure to meet a
+% deadline for output.}
 
 \subsection{Introduction}
 From the definition it is given that \say{Any system in which the time at
@@ -31,26 +32,26 @@ amount of pressure to apply to the brakes in order to optimize  the braking
 length of the vehicle, that is the output. The time it takes from receiving 
 the input till it produces the output is critical. This is due to the fact that
 the brakes needs to be on instantly. So in fact when talking about
-realtime-systems, the only concern is whether or not the deadlines are met.
+real time systems, the only concern is whether or not the deadlines are met.
 
 \subsection{Timeliness}
 The definition mentions the concept of timeliness as the following:
 \say{Timeliness is a function of the total system: missile guidance requires
 output within a few milliseconds of input whereas scheduling of steamships requires responses
-measured in days}. This means that for all realtime-systems the concept of
+measured in days}. This means that for all real time systems the concept of
 timeliness is relative to the project - which makes sense since the only thing
 to care about is whether or not the deadlines are met.
 
 \subsection{Deadlines}
 As mentioned in the given definition, realtime systems are concerned about
 deadlines in a system.
-The realtime system gets classified depending on the consequences of not
+The real time system gets classified depending on the consequences of not
 meeting a deadline. If the result of a failed deadline is catastrophic, the
 system gets classified as a hard real-time system - examples of such are control
 systems for airplanes, nuclear power plants, etc.
 If an occasional deadline is missed, or the system doesn't shut down if a
-deadline is missed, it might be a soft realtime system, for example
-video-conferencing software the result of a missed deadline might be droped
+deadline is missed, it might be a soft real time system, for example
+video-conferencing software the result of a missed deadline might be dropped
 frames but nothing critical.
 
 \subsection{Tasks}
