- Added the second test  - Added the third test

--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -89,10 +89,10 @@ which color it is suposed to track. The process of choosing the color is done
 using some software that comes with the camera, here a colormap is made which
 tells the preprocessor on the camera which colors to track. 
 
-There are three different test that can be done, first to the how far
-the camera can track an object, the second to determine which colour the camera
-best sees and the third to determine if lighting up the object changed the
-cameras abillity to track the colour \/ object.\nl
+There are three different test that can be done, the first to 
+determine which colour the camera best sees, the second to see how
+far the camera can track an object and the third to determine if lighting up the
+object changed the cameras abillity to track the colour \/ object.\nl
 
 The first test is to determine what colour the camera best can see, to do this
 a square of paper with the same size will be used to make sure that the only
@@ -101,4 +101,18 @@ should stay at the same place so that the lighting condition stays the same,
 then the paper square is place at a certain distance to the camera. The result
 of each test is how many blobs of the tracking was the recordnised and how
 consisten the size of the coloured blob is.\nl
+
+The second test, to test how far the camera can track objects is to do this the
+turret it setup in the same manner as the test before, here the object which is
+the paper is moved further and further away, optional could the colours of the
+paper be changed to see how well the different colours can be seen from a
+distance. The results of this test is the distance that the camera can see each
+colour and again how consisten it is.\nl
+
+The third test, to test weather lighting up the object with an flashlight
+improves how well the camera sees the object, again this test needs to bed setup
+in the same manner at the two other test with the turret in the same place
+thoughout the test and then the test pocedes as test 2 with observering how far
+away it can see the object and as a result determine if the flashlight is
+nessery and what colour works best with it.
 
