--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -25,6 +25,13 @@
   publisher={OUP Oxford}
 }
 
+@MICS{NXTCam,
+  author={mindsensors.com},
+  title={{NXTCam v4 User Guide}},
+  note = {seen 24/10/2016},
+  howpublished = {\url{http://www.mindsensors.com/ev3-and-nxt/14-vision-subsystem-camera-for-nxt-or-ev3-nxtcam-v4}}
+}
+
 @MISC{Ultrasonic_sensor,
   author = {},
   title = {{Ultrasonic Sensors}},
