--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -32,6 +32,14 @@
   howpublished = {\url{http://www.mindsensors.com/ev3-and-nxt/14-vision-subsystem-camera-for-nxt-or-ev3-nxtcam-v4}}
 }
 
+@MISC{Barr_Embedded,
+  author = {Barr Group},
+  title = {{Embedded Systems Glossary}},
+  note = {seen 24/10/2016},
+  howpublished = {\url{http://www.barrgroup.com/Embedded-Systems/Glossary}}
+}
+
+
 @MISC{Ultrasonic_sensor,
   author = {},
   title = {{Ultrasonic Sensors}},
