--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -8,14 +8,20 @@ incorporate deadlines and schedules and examine what elements from machine
 intelligence could be used by an autonomous turret.
 
 \section{Embedded Systems}
-An embedded system is a device with limited resources both in terms of computing
-power and how much memory it has available. They are used everywhere to do small task and
-jobs. \fix{It is difficult to give an exact definition of what an
-embedded system is, but a crude definition\citep[ch.1.1]{vahid1999embedded} is}{We
-need a better definition}:\nl
-
-\textit{An  embedded  system  is  nearly  any computing system other than a desktop,
-laptop, or  mainframe  computer.}\nl
+As explained by the embedded systems manufacturer BarrGroup
+\citep{Barr_Embedded}, an embedded system is \nl \center{\textit{``A combination
+of computer hardware and software, and perhaps additional mechanical or other
+parts, designed to perform a dedicated function. In some cases, embedded systems
+are part of a larger system or product, as in the case of an antilock braking
+system in a car.''}}\nl
+% An embedded system is a device with limited resources both in terms of computing
+% power and how much memory it has available. They are used everywhere to do small
+% task and jobs. \fix{It is difficult to give an exact definition of what an
+% embedded system is, but a crude definition\citep[ch.1.1]{vahid1999embedded}
+% is}{We need a better definition}:\nl
+% 
+% \textit{An  embedded  system  is  nearly  any computing system other than a desktop,
+% laptop, or  mainframe  computer.}\nl
 
 This means that embedded systems cover alot of different types of computers, for example
 the ABS-brakes in a modern car, the cash registers in retailstores, washing machines, etc.
