--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -14,7 +14,7 @@ which will then be searched for. When the camera registers an object of this
 colour, it will build a datalogical representation of the object consisting of a
 number of rectangles. Such a representation can be seen in \autoref{}.
 
-%figx
+\figx[0.4]{TwoBlops.PNG}{Visual representation of what the camera senses.}
 
 For each identified rectangle, the camera will output the coordinates for that
 rectangle's sides, top, bottom and colour. 
