--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -9,11 +9,13 @@ intelligence could be used by an autonomous turret.
 
 \section{Embedded Systems}
 As explained by the embedded systems manufacturer BarrGroup
-\citep{Barr_Embedded}, an embedded system is \nl \center{\textit{``A combination
+\citep{Barr_Embedded}, an embedded system is: \nl
+
+\begin{center}{\textit{``A combination
 of computer hardware and software, and perhaps additional mechanical or other
 parts, designed to perform a dedicated function. In some cases, embedded systems
 are part of a larger system or product, as in the case of an antilock braking
-system in a car.''}}\nl
+system in a car.''}}\end{center}\nl
 % An embedded system is a device with limited resources both in terms of computing
 % power and how much memory it has available. They are used everywhere to do small
 % task and jobs. \fix{It is difficult to give an exact definition of what an
