- Removed a problem LaTex was complaining about

--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -33,7 +33,7 @@ This test had the turret retract to its resting position before setting its
 angle of fire. Below will be presented the data from data set 2. The rest
 of the data can be found in \autoref{}.
 
-\begin{table}[]
+\begin{table}[H]
 \centering
 \begin{tabular}{ll}
 Test Num:                     & 2      \\ \hline
@@ -58,7 +58,7 @@ This test had the turret set the angle as an offset based on the previously set
 angle. Below will be presented the data from data set 4.
 The rest of the data can be found in \autoref{}.
 
-\begin{table}[]
+\begin{table}[H]
 \centering
 \begin{tabular}{ll}
 Test Num:                     & 4      \\ \hline
