--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -1,23 +1,35 @@
-\section{Sensor Testing} 
-In this chapter the different sensors will be tested, the reasoning for testing
-the sensors is that we need to find out how precise the sensors are and how far
-they can measure. There are two sensor which needs to be tested, one is an
-ultrasonic sensor which is used for measuring the distance. The other sensor
-which needs to be tested is a camera for tracking specific colours. We will then
-use the results from these test to utilize the full potential of the sensors. 
+\section{Sensor Testing}
+The two sensors used on the turret both have datasheets with technical
+documentation, but in order to verify this information, and to gain a
+deeper understanding of how to use these sensors, this section will be used to
+test their individual features. The first test in \autoref{UltraTest} will be
+used to determine the accuracy and limitations of the ultrasonic sensor. The second
+test in \autoref{CamTest} will be used to determine how the camera can best be
+used to identify a target, and how the resulting data can be accurately used. 
+
+% First the
+% testing methodology will be explained for each test, and then this methodology
+% will be used to devise tests for the two sensors. 
+% 
+% In this chapter the different sensors will be tested, the reasoning for testing
+% the sensors is that we need to find out how precise the sensors are and how far
+% they can measure. There are two sensor which needs to be tested, one is an
+% ultrasonic sensor which is used for measuring the distance. The other sensor
+% which needs to be tested is a camera for tracking specific colours. We will then
+% use the results from these test to utilize the full potential of the sensors. 
  
-To find out which sensors are the optimal
-sensors for the project, this chapter will be used to test the different sensors. The testing of the
-sensors will also be used to find out how precise they are.\nl
+% To find out which sensors are the optimal
+% sensors for the project, this chapter will be used to test the different sensors. The testing of the
+% sensors will also be used to find out how precise they are.\nl
+% % 
+% First the testing methodology will be explained, then this methodology
+% will be used to devise tests for the different sensors.
 
-First the testing methodology will be explained, then this methodology
-will be used to devise tests for the different sensors. 
+% \subsection{Testing Methodology}
+% The testing will be divided into to two parts, one part is testing the two
+% distance sensors and the second part is testing the camera. 
 
-\subsection{Testing Methodology}
-The testing will be divided into to two parts, one part is testing the two
-distance sensors and the second part is testing the camera. 
-
-\subsubsection{Ultrasonic Sensor}
+\subsection{Ultrasonic Sensor}\label{UltraTest}
 The test of the ultrasonic sensor was divided into 4 different experiments, the
 difference between the experiments are the size of the object being tracked and
 whether the sensor is shielded or not. The different object sizes was tested
@@ -71,7 +83,8 @@ large field of view. Therefore, the object should be wider rather than taller.
 % become a very limiting factor in regards to how far the target can be placed
 % from the cannon. 
 
-\subsubsection{Camera tracking}%Will most likely need a better name
+\subsection{Camera tracking}\label{CamTest}%Will most likely need a better
+% name
 Testing the camera will consist of several parts, these parts will heavily rely
 on the technical specifications of the camera. Therefore the first part of this
 section will be on the technical specifications of the camera and the needed
