--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -12,9 +12,10 @@ make use of a specialized camera, which is capable of identifying coloured
 objects. In order to use the camera, the user specifies a colour of choice,
 which will then be searched for. When the camera registers an object of this
 colour, it will build a datalogical representation of the object consisting of a
-number of rectangles. Such a representation can be seen in \autoref{}.
+number of rectangles. Such a representation can be seen in
+\autoref{TwoBlops2.PNG}.
 
-\figx[0.4]{TwoBlops.PNG}{Visual representation of what the camera senses.}
+\figx[0.70]{TwoBlobs2.PNG}{Visual representation of what the camera senses.}
 
 For each identified rectangle, the camera will output the coordinates for that
 rectangle's sides, top, bottom and colour. 
@@ -25,8 +26,8 @@ Below are the technical specifications\citep[p. 1]{NXTCam} for the camera.
   \item Analyzes at 30 frames per second
   \item Uses a resolution of 88x144 pixels
   \item Uses a standard NXT sensor port
-  \item Gathers information about: number of objects, color of objects and
-  bounding box coordinates
+  \item Resulting data consists of: number of objects, color of objects and
+  bounding box coordinates of these objects.
 \end{itemize}
 
 \subsection{Ultrasonic Sensor}
@@ -37,7 +38,7 @@ received by the second hole. An image of this sensor can be seen in \autoref{}.
 The delay between producing and receiving the sound wave is used to determine
 the distance to a given object.
 
-\figx[0.4]{UltrasoundPic.jpg}{The two ultrasonic sensors and the camera mounted
+\figx[0.2]{UltrasoundPic.jpg}{The two ultrasonic sensors and the camera mounted
 on the turret.}
 
 The described sensor is a standardized ultrasonic sensor from Lego NXT. The
@@ -48,6 +49,7 @@ sensor's technical specifications\citep{Ultrasonic_sensor} can be found below.
   \item Looses precision after 1.5m
   \item Has a 25ms delay between readings
   \item Works best with large, hard-sized objects
+  \item Each measurement outputs a single integer
 \end{itemize}
 
 % The product description says that it has a maximum range of 2.5m with
